Fix side from overlapping photo

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
   flex-flow: row;
 }
 
-@media all and (max-width: 660px) {
+@media all and (max-width: 700px) {
   .wrapper-for-flex {
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
